<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/forecast_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/standart_margin"
    card_view:cardCornerRadius="@dimen/card_corner_radius"
    card_view:cardBackgroundColor="@color/half_transparent"
    card_view:cardElevation="@dimen/card_elevation">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/detail_parameter_card_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_parameter_card_title"
            android:layout_margin="@dimen/standart_margin"
            android:textSize="@dimen/card_title_size"
            android:textStyle="italic" />

        <include layout="@layout/break_line" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standart_margin">
            <TextView
                android:id="@+id/detail_parameter_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="@dimen/ic_size_large"
                android:layout_alignBaseline="@+id/detail_parameter_clouds"
                android:layout_alignBottom="@+id/detail_parameter_clouds"
                android:layout_alignParentStart="true"
                android:layout_margin="@dimen/margin_large"/>
       <!--.....................Parameters Name.............................-->
            <TextView
                android:id="@+id/detail_parameter_rain_name"
                android:text="@string/detail_parameter_rain_name"
                android:layout_marginStart="@dimen/standart_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/detail_parameter_icon" />

            <TextView
                android:id="@+id/detail_parameter_windspeed_name"
                android:layout_marginStart="@dimen/standart_margin"
                android:text="@string/detail_parameter_windspeed_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/detail_parameter_icon"
                android:layout_below="@id/detail_parameter_rain_name"/>
            <TextView
                android:id="@+id/detail_parameter_humidity_name"
                android:layout_marginStart="@dimen/standart_margin"
                android:text="@string/detail_parameter_humidity_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/detail_parameter_icon"
                android:layout_below="@id/detail_parameter_windspeed_name"/>
            <TextView
                android:id="@+id/detail_parameter_clouds_name"
                android:layout_marginStart="@dimen/standart_margin"
                android:text="@string/detail_parameter_clouds_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/detail_parameter_icon"
                android:layout_below="@id/detail_parameter_humidity_name"/>
            <TextView
                android:id="@+id/detail_parameter_pressure_name"
                android:layout_marginStart="@dimen/standart_margin"
                android:text="@string/detail_parameter_pressure_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/detail_parameter_icon"
                android:layout_below="@id/detail_parameter_clouds_name"/>

           <!-- .............................Parameters Value.................................-->

            <TextView
                android:id="@+id/detail_parameter_rain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                />
            <TextView
                android:id="@+id/detail_parameter_windspeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_parameter_rain"
                android:layout_alignParentEnd="true"/>

            <TextView
                android:id="@+id/detail_parameter_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/detail_parameter_windspeed"/>

            <TextView
                android:id="@+id/detail_parameter_clouds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/detail_parameter_humidity" />

            <TextView
                android:id="@+id/detail_parameter_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/detail_parameter_clouds"/>

            <TextView
                android:layout_width="@dimen/line_width"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/detail_parameter_icon"
                android:layout_alignBottom="@+id/detail_parameter_pressure" />

        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>